Updated logo images to cropped versions. Tested with a background colour to ensure no white space was displayed

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,11 @@
 /* Style sheet for index.html */
+
+body {
+
+    background-color : #99FF66;
+
+}
+
 /* Comment style sheet to work with a blank page for now
 
 body {
